--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.60",
+        "@monaco-editor/react": "^4.2.2",
         "@reduxjs/toolkit": "^1.6.1",
+        "classnames": "^2.3.1",
+        "file-saver": "^2.0.5",
+        "jszip": "^3.7.1",
+        "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-draggable": "^4.4.4",
-        "react-jss": "^10.8.0",
+        "react-gridlines": "^1.1.7",
         "react-redux": "^7.2.5",
         "react-resizable": "^3.0.4",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "react-window": "^1.8.6",
+        "react-zoom-pan-pinch": "^2.1.3",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
